# libburrow

./: .gitignore  AUTHORS  COPYING  INSTALL  LICENSE  Makefile.am  README  configure.ac
config/: pandora-plugin.ini
dev/: architecture_discussion.txt  milestones.txt
docs/doxygen/: Doxyfile
examples/: async_client.c  complete_loop.c  demo.c  eday-nonblock-example.c  oneshot.c
libburrow/: attributes.c  attributes.h  backends.c  backends.h  burrow-sketches.h  burrow.c  burrow.h  common.h  constants-local.h  constants.h  filters.c  filters.h  internal.h  local.h  macros.h  structs-local.h  structs.h  visibility.h
libburrow/backends/dummy/: dummy.c  dummy.h
libburrow/backends/http/: curl_backend.c  curl_backend.h  json_processing.c  json_processing.h  user_buffer.c  user_buffer.h
libburrow/backends/http/parser/contrib/: README.txt
libburrow/backends/http/parser/contrib/JSON_PARSER/: JSON_parser.c  jtest
libburrow/backends/memory/: Accounts.c  Dictionary.c  Memory.c  Queues.c  README  dictionary.c  dictionary.h  memory.c  memory.h
support/: libburrow.pc.in  libburrow.spec.in
tests/: burrow_attributes_st.c  burrow_backend_dummy.c  burrow_backend_http.c  burrow_backend_memory.c  burrow_filters_st.c  burrow_generic_tests.c  burrow_generic_tests.h  burrow_st.c  common.h  run.sh
